updating content-list.css to fix video display issues(z-index)

--- a/static/css/pages/content-list.css
+++ b/static/css/pages/content-list.css
@@ -31,7 +31,7 @@
   height: 100%;
   color: inherit;
   position: relative;
-  z-index: 1;
+  z-index: 10;
 }
 
 .content-item {
